<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_back"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="start"
                android:layout_margin="10dp"
                android:src="@drawable/ic_back" />

            <RelativeLayout
                android:layout_width="90dp"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/img_profiel"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/user" />

                <ImageView
                    android:id="@+id/img_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/box"
                    android:padding="5dp"
                    android:src="@drawable/ic_edit" />
            </RelativeLayout>

            <View
                android:layout_width="15dp"
                android:layout_height="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/ed_firstname"
                        android:layout_width="match_parent"
                        android:layout_height="42dp"
                        android:layout_weight="1"

                        android:background="@drawable/rounded_input"
                        android:hint="@string/first_name"
                        android:inputType="text"
                        android:padding="5dp" />

                    <View
                        android:layout_width="15dp"
                        android:layout_height="1dp" />

                    <EditText
                        android:id="@+id/ed_lastname"
                        android:layout_width="match_parent"
                        android:layout_height="42dp"
                        android:layout_weight="1"
                        android:background="@drawable/rounded_input"
                        android:hint="@string/last_name"
                        android:inputType="text"
                        android:padding="5dp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="15dp" />

                <EditText
                    android:id="@+id/ed_eamil"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:background="@drawable/rounded_input"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="5dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="15dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_input"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:orientation="vertical">

                        <Spinner
                            android:id="@+id/spinner"
                            android:layout_width="fill_parent"
                            android:layout_height="35dp" />


                    </LinearLayout>

                    <EditText
                        android:id="@+id/ed_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@null"
                        android:hint="@string/mobile"
                        android:inputType="phone" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="15dp" />

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/ed_password"
                        android:layout_width="match_parent"
                        android:layout_height="42dp"
                        android:background="@drawable/rounded_input"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:padding="5dp" />

                    <ImageView
                        android:id="@+id/show_pass_btn"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:onClick="ShowHidePass"
                        android:padding="5dp"

                        android:src="@drawable/eye" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="15dp" />

                <EditText
                    android:id="@+id/ed_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_input"
                    android:gravity="start"
                    android:hint="@string/address"
                    android:minLines="5"
                    android:padding="5dp" />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="15dp" />

                <TextView
                    android:id="@+id/txt_teram"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|start"
                    android:padding="5dp"
                    android:text="@string/gender"
                    android:textColor="@color/black" />

                <RadioGroup
                    android:id="@+id/radioGrp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"

                    >

                    <RadioButton
                        android:id="@+id/radioM"
                        android:layout_width="wrap_content"
                        android:layout_height="24dp"
                        android:layout_gravity="left"
                        android:checked="true"
                        android:text="Male"
                        android:textSize="14dp" />

                    <RadioButton
                        android:id="@+id/radioF"
                        android:layout_width="wrap_content"
                        android:layout_height="24dp"
                        android:layout_gravity="right"
                        android:layout_marginStart="5dp"
                        android:text="Female"
                        android:textSize="14dp" />
                </RadioGroup>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="30dp" />

                <TextView
                    android:id="@+id/btn_create"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:background="@drawable/rounded_button"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/continues"
                    android:theme="@style/AppTheme.Button" />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="30dp" />


            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>