<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.PayoutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:gravity="center|start"
        android:padding="5dp">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:padding="2dp"
            android:src="@drawable/ic_back" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/mypayout"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_withdraw"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/withdraw"
                android:textColor="@color/purple_700"
                android:textStyle="bold"

                />
        </LinearLayout>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_input"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/total_earning"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/btn_earnig"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_input"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/withdraw_limit"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/btn_limit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyviewtrip"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/lvl_notfound"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationView"
            android:layout_width="250dp"
            android:layout_height="250dp"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/notfound" />

    </LinearLayout>
</LinearLayout>